<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="loading_games">Loading games…</string>
    <string name="model_status_failure">An error occurred preparing data, please try again later.</string>
    <string name="model_status_busy">Preparing data…</string>
    <string name="games">Games</string>
    <string name="network_failure">An network error occurred, please try again later.</string>
    <string name="app_title">EyesPie</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="register_with_google">Register with Google</string>
    <string name="register">Register</string>
    <string name="register_title">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_email_placeholder">Enter email</string>
    <string name="login_password_placeholder">Enter password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_confirm_password_placeholder">Re-enter your password</string>
    <string name="logging_in">Logging in…</string>
    <string name="loading_game">Loading game…</string>
    <string name="login_failed">Login failed, please try again.</string>
    <string name="register_failed">Register failed, please try again.</string>
    <string name="save_failed">Save failed, please try again.</string>
    <string name="things">Things</string>
    <string name="players">Players</string>
    <string name="created_at">Created</string>
    <string name="expires_at">Expires</string>
    <string name="next_turn">Next Turn</string>
    <string name="location">Location</string>
    <string name="new_game_header">Start a new game</string>
    <string name="new_game_content">Give your game a name.</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="new_thing">New Thing</string>
    <string name="new_thing_description">Scan a new thing for your collection. People nearby will be able to try and guess it.</string>
    <string name="loading_dashboard">Loading dashboard…</string>
    <string name="my_things">My Things</string>
    <string name="nearby">Nearby</string>
    <string name="has_more">More</string>
    <string name="friends">Friends</string>
    <string name="no_things_found">No things found.</string>
    <string name="no_games_found">No games found.</string>
    <string name="no_players_found">No players found.</string>
    <string name="no_camera">Camera not available, try enable permission in settings.</string>
    <string name="no_clues">Clues not available, try capturing another image.</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="onboarding_genai_text">Download artificial intelligence models?\n\nModels will download in the background and help improve gameplay experience and privacy.</string>
    <string name="onboarding_genai_title">On Device Models</string>
    <string name="onboarding_welcome_title">Welcome to EyesPie</string>
    <string name="notification_title_download_model">AI Model: %1$s</string>
    <string name="notification_title_download_encoder">AI Encoder: %1$s</string>
    <string name="no_data_found">No data found</string>
    <string name="download_started">Download started</string>
    <string name="downloading">Downloading…</string>
    <string name="download_failed">Download failed</string>
    <string name="download_completed">Download completed</string>
</resources>
