...
    <string name="no_players_found">No players found.</string>
    <string name="no_camera">Camera not available, try enable permission in settings.</string>
    <string name="no_clues">Clues not available, try capturing another image.</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="retry">Retry</string>
    <string name="onboarding_genai_text">Download artificial intelligence models?\n\nModels will download in the background and help improve gameplay experience and privacy.</string>
    <string name="onboarding_genai_title">On Device Models</string>
    <string name="onboarding_welcome_title">Welcome to EyesPie</string>
    <string name="notification_title_download_model">AI Model: %1$s</string>
...
