...
                enabled = state.enabled,
                onClick = action,
            ) {
                Icon(
                    imageVector = Icons.Default.PhotoCamera,
                    tint = MaterialTheme.colorScheme.onSurface,
                    contentDescription = "Capture",
                )
            }
        }
    }

    RenderBackButton(
...
